# ncbidb

./: README.md  pyproject.toml
ncbidb/: main.py
ncbidb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ncbidb/pymods/: jsonload.py
